2016-05-13 belangeo <belangeo@gmail.com>

    * Fixed wrong definition of withOsc() and withCoreaudio().
    * Real final revision for version 0.8.0.
    - SHA: 

2016-05-12 belangeo <belangeo@gmail.com>

    * Final revision for version 0.8.0.
    - SHA: e833e404e20e9531b901ee8924b66f711f3c5e8f

2016-05-10 belangeo <belangeo@gmail.com>

    * Added new functions: withPortaudio, withPortmidi, withCoreaudio, withJack, withOSC.

2016-05-10 belangeo <belangeo@gmail.com>

    * Added a bela framework (BeagleBone Black) with instructions in the embedded folder.

2016-05-10 belangeo <belangeo@gmail.com>

    * Added a new compilation flag, --minimal, to build without portaudio, portmidi and liblo.

2016-05-10 belangeo <belangeo@gmail.com>

    * Added new examples on the online documentation.

2016-05-06 belangeo <belangeo@gmail.com>

    * Made portaudio, portmidi and liblo optional dependencies.

2016-04-29 belangeo <belangeo@gmail.com>

    * Added a quality factor everywhere a FLAC or OGG sound file can be saved on disk.

2016-04-03 belangeo <belangeo@gmail.com>

    * Disto uses now a simple but more efficient waveshaper formula. This algorithm 
	  is faster and does not produce large amplitude variation like the atan2 function.

2016-04-03 belangeo <belangeo@gmail.com>

    * Added new object: Exp, calculates the value of e to the power of x.

2016-04-02 belangeo <belangeo@gmail.com>

    * Revision, clean-up and optimization of various filters in the library.
    (Biquad, Biquadx, Port, Tone, Atone, Allpass, Allpass2, Phaser, BandSplit MoogLP).

2016-03-31 belangeo <belangeo@gmail.com>

    * Fixed bug when a LFO object receives a negative frequency.

2016-03-28 belangeo <belangeo@gmail.com>

    *  Added new object: FastSine, two fast sin approximations (faster than linear table lookup).

2016-03-27 belangeo <belangeo@gmail.com>

    *  Added new function : getPyoKeywords, returns the list of pyo keywords (classes and functions).
